gccida/c3/build_cfa_loc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_cfa_loc/src/dwarf2out.c:3400:25: error: use of undeclared identifier 'dwarf_location_atom'
head = new_loc_descr( ( dwarf_location_atom)( LODWORD( cfaa->reg) + 112), cfaa->base_offset, 0LL); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_cfa_loc/src/dwarf2out.c:3408:25: error: use of undeclared identifier 'dwarf_location_atom'
head = new_loc_descr( ( dwarf_location_atom)( cfaa->reg + 80), 0LL, 0LL); 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_cfa_loc/src/obj/dwarf2out.o] Error 1
